<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/door" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_room"
            android:textColor="@color/lightNavy"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        style="@style/Divider"
        android:layout_marginTop="5dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edit_text_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/room_name"/>
    </FrameLayout>

    <Button
        android:id="@+id/button_set_expiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/set_expiration_date"
        android:visibility="visible"
        />

    <LinearLayout
        android:id="@+id/set_expiration_date_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <DatePicker
            android:id="@+id/date_spinner"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <TextView
            android:id="@+id/textview_expiration_date"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:visibility="gone" />

        <TimePicker
            android:id="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:timePickerMode="spinner"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textview_expiration_time"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:visibility="gone"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button_set_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Set"/>

            <Button
                android:id="@+id/button_cancel_set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_lock_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/set_password" />

    <EditText
        android:id="@+id/password_edit_text_set"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:hint="@string/password"
        android:gravity="center"
        android:inputType="textPassword"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_cancel_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_create_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_room" />

</LinearLayout>