<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_activity_gradient_background"
    android:theme="@style/EditTextTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_button_create_account"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/back_image"
                android:src="@drawable/ic_back_button"
                android:tint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="122dp"
                android:layout_height="59dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/phylo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/first_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="7"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:inputType="textPersonName|textNoSuggestions" />

            <EditText
                android:id="@+id/last_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:inputType="textPersonName|textNoSuggestions" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_username_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/username_format"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:maxLines="1"
                    android:inputType="text|textNoSuggestions"
                    android:hint="@string/username" />

                <ProgressBar
                    android:id="@+id/progress_bar_username_availability"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="14dp"
                    android:indeterminateDrawable="@drawable/progress"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/checkmark_username_availability"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="14dp"
                    android:src="@drawable/check_mark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/x_mark_username_availability"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="14dp"
                    android:src="@drawable/x_mark"
                    android:visibility="gone" />
            </FrameLayout>

            <Button
                android:id="@+id/button_check_username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:text="Check"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress|textNoSuggestions" />

        <TextView
            android:id="@+id/text_view_password_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/password_format"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:hint="@string/password"
            android:inputType="textPassword|textNoSuggestions" />

        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/confirm_password"
            android:maxLines="1"
            android:inputType="textPassword|textNoSuggestions" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <ProgressBar
            android:id="@+id/create_account_progress_bar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>